Upgraded all meli

--- a/meli_oerp_multiple/views/connection_account_view.xml
+++ b/meli_oerp_multiple/views/connection_account_view.xml
@@ -321,6 +321,7 @@
                 </group>
                 <group string="Configuración Stock" name="meli_oerp_stock"  col="2">
                   <group>
+                    <field name="mercadolibre_stock_virtual_available" invisible="0"/>
                     <field name="mercadolibre_stock_warehouse" invisible="0"/>
                     <field name="mercadolibre_stock_location_to_post" invisible="0"/>
                     <!--field name="mercadolibre_stock_location_to_post" invisible="0"  domain = "[('mercadolibre_active','=',True),('company_id', '=', id)]"/-->
@@ -330,6 +331,15 @@
                     <field name="mercadolibre_stock_warehouse_full" invisible="0"/>
                     <field name="mercadolibre_stock_location_to_post_full" invisible="0"/>
                     <!--field name="mercadolibre_stock_location_to_post_full" invisible="0"  domain = "[('mercadolibre_logistic_type','=','fulfillment'),'|',('mercadolibre_active','=',True),('company_id', '=', id)]"/-->
+                  </group>
+                  <group>
+                    <field name="mercadolibre_order_confirmation_delivery" invisible="0"/>
+                  </group>
+                  <group>
+                    <field name="mercadolibre_order_confirmation_delivery_full" invisible="0"/>
+                  </group>
+                  <group>
+                    <field name="mercadolibre_stock_sku_mapping" invisible="0"/>
                   </group>
                 </group>
                 <group string="Configuración Contabilidad" name="meli_oerp_accounting"  col="2">
@@ -341,6 +351,18 @@
                     <field name="mercadolibre_process_payments_customer" invisible="0"/>
                     <field name="mercadolibre_process_payments_supplier_fea" invisible="0"/>
                     <field name="mercadolibre_process_payments_supplier_shipment" invisible="0"/>
+                  </group>
+                  <group>
+                    <field name="mercadolibre_order_confirmation_invoice" invisible="0"/>
+                  </group>
+                  <group>
+                    <field name="mercadolibre_order_confirmation_invoice_full" invisible="0"/>
+                  </group>
+                </group>
+                <group>
+                  <group>
+                    <field name="mercadolibre_post_invoice" invisible="0"/>
+                    <field name="mercadolibre_post_invoice_dont_send" invisible="0"/>
                   </group>
                 </group>
               </sheet>
