--- a/meli_oerp_multiple/views/company_view.xml
+++ b/meli_oerp_multiple/views/company_view.xml
@@ -2,12 +2,12 @@
 <odoo>
     <data>
 
-			<record model="ir.ui.view" id="view_company_page_mercadolibre">
-					<field name="name">res.company.form.mercadolibre</field>
+			<record model="ir.ui.view" id="view_company_page_mercadolibre_multiple">
+					<field name="name">res.company.form.mercadolibre.multiple</field>
 					<field name="model">res.company</field>
-					<field name="inherit_id" ref="base.view_company_form"/>
+					<field name="inherit_id" ref="meli_oerp.view_company_page_mercadolibre"/>
 					<field name="arch" type="xml">
-						<data>
+              <data>
 								<notebook>
 										<page string="MercadoLibre Multiple" invisible="1">
 											<field name="mercadolibre_connections" invisible="0" groups="meli_oerp_multiple.group_mercadolibre_connectors_manager"
@@ -23,20 +23,28 @@
 										</page>
 								</notebook>
               </data>
+					</field>
+			</record>
+
+      <record model="ir.ui.view" id="view_company_page_mercadolibre_connections">
+					<field name="name">res.company.form.mercadolibre.connections</field>
+					<field name="model">res.company</field>
+					<field name="inherit_id" ref="meli_oerp.view_company_page_mercadolibre"/>
+					<field name="arch" type="xml">
               <xpath expr="//group[@name='Account']" position="before">
-                <group string="Multiple Accounts" name="Accounts">
-                  <field name="mercadolibre_connections" invisible="0" groups="meli_oerp_multiple.group_mercadolibre_connectors_manager"
-                          domain="['|',('company_id','=',False),('company_id','=',id)]">
-                      <tree>
-                        <field name="company_id"/>
-                        <field name="name"/>
-                        <field name="client_id"/>
-                        <!--field name="state"/-->
-                        <field name="type"/>
-                      </tree>
-                  </field>
-                </group>
-              </xpath>
+                  <group string="Multiple Accounts" name="Accounts">
+                    <field name="mercadolibre_connections" invisible="0" groups="meli_oerp_multiple.group_mercadolibre_connectors_manager"
+                            domain="['|',('company_id','=',False),('company_id','=',id)]">
+                        <tree>
+                          <field name="company_id"/>
+                          <field name="name"/>
+                          <field name="client_id"/>
+                          <!--field name="state"/-->
+                          <field name="type"/>
+                        </tree>
+                    </field>
+                  </group>
+                </xpath>
 					</field>
 			</record>
 
